--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<nav id="nav" class="nav1">
 			<div class="container-nav">
 				<div class="logo">
-					<img src="/img/002-social-media.png" alt="Logo">
+					<img src="img/002-social-media.png" alt="Logo">
 				</div>
 				<div class="enlaces" id="enlaces">
 					<a href="#" id="enlace-inicio" class="btn-header">Inicio</a>
@@ -44,7 +44,7 @@
 			<div class="card">
 				<div class="content-card">
 					<div class="people">
-						<img src="/img/team1.jpg" alt="" width="150">
+						<img src="img/team1.jpg" alt="" width="150">
 					</div>
 					<div class="texto-team">
 						<h4>Uno</h4>
@@ -53,7 +53,7 @@
 				</div>
 				<div class="content-card">
 					<div class="people">
-						<img src="/img/1.jpg" alt="" width="150">
+						<img src="img/1.jpg" alt="" width="150">
 					</div>
 					<div class="texto-team">
 						<h4>Dos</h4>
@@ -62,7 +62,7 @@
 				</div>
 				<div class="content-card">
 					<div class="people">
-						<img src="/img/2.jpg" alt="" width="150">
+						<img src="img/2.jpg" alt="" width="150">
 					</div>
 					<div class="texto-team">
 						<h4>Tres</h4>
@@ -78,17 +78,17 @@
 				<h4 class=after>que te ofrecemos</h4>
 				<div class="servicios">
 					<div class="caja-servicios">
-						<img src="/img/002-social-media.png" alt="">
+						<img src="img/002-social-media.png" alt="">
 						<h4>Servicio 1</h4>
 						<p>Desarrollo de estarategias de mercadeo digital.</p>
 					</div>
 					<div class="caja-servicios">
-						<img src="/img/003-laptop.png" alt="">
+						<img src="img/003-laptop.png" alt="">
 						<h4>Servicio2</h4>
 						<p>Lorem ipsum dolor sit amet consectetur.</p>
 					</div>
 					<div class="caja-servicios">
-						<img src="/img/005-responsive-design-symbol.png" alt="">
+						<img src="img/005-responsive-design-symbol.png" alt="">
 						<h4>Servicio 3</h4>
 						<p>Lorem ipsum dolor sit amet consectetur.</p>
 					</div>
@@ -109,7 +109,7 @@
 			<div class="galeria-work">
 				<div class="cont-work programacion">
 					<div class="img-work">
-						<img src="/img/grupo1_1.jpg" alt="" width="200">
+						<img src="img/grupo1_1.jpg" alt="" width="200">
 					</div>
 					<div class="textos-work">
 						<h4>programacion1</h4>
@@ -117,7 +117,7 @@
 				</div>
 				<div class="cont-work programacion">
 					<div class="img-work">
-						<img src="/img/grupo1_2.jpg" alt="" width="200">
+						<img src="img/grupo1_2.jpg" alt="" width="200">
 					</div>
 					<div class="textos-work">
 						<h4>programacion2</h4>
@@ -125,7 +125,7 @@
 				</div>
 				<div class="cont-work programacion">
 					<div class="img-work">
-						<img src="/img/grupo1_3.png" alt="" width="200">
+						<img src="img/grupo1_3.png" alt="" width="200">
 					</div>
 					<div class="textos-work">
 						<h4>programacion3</h4>
@@ -133,7 +133,7 @@
 				</div>
 				<div class="cont-work diseño">
             	<div class="img-work">
-                  <img src="/img/grupo2_1.jpg" alt="" width="200">
+                  <img src="img/grupo2_1.jpg" alt="" width="200">
                </div>
                <div class="textos-work">
                	<h4>Grupo 2 1</h4>
