--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<nav id="nav" class="nav1">
 			<div class="container-nav">
 				<div class="logo">
-					<img src="img/002-social-media.png" alt="Logo">
+					<img src="/img/002-social-media.png" alt="Logo">
 				</div>
 				<div class="enlaces" id="enlaces">
 					<a href="#" id="enlace-inicio" class="btn-header">Inicio</a>
