--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<div class="lds-facebook"><div></div><div></div><div></div></div>
 	</div>
 	<header>
+		<p> los cambios si se reflejan</p>
 		<nav id="nav" class="nav1">
 			<div class="container-nav">
 				<div class="logo">
