--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 		<nav id="nav" class="nav1">
 			<div class="container-nav">
 				<div class="logo">
-					<img src="/img/002-social-media.png" alt="Logo">
+					<img src="/img/1.jpg" alt="/img/1.jpg">
+					<img src="img/2.jpg" alt="img/2.jpg">
+					<img src="team1.jpg" alt="team">
 				</div>
 				<div class="enlaces" id="enlaces">
 					<a href="#" id="enlace-inicio" class="btn-header">Inicio</a>
