--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
 		<div class="lds-facebook"><div></div><div></div><div></div></div>
 	</div>
 	<header>
-		<p> los cambios si se reflejan</p>
 		<nav id="nav" class="nav1">
 			<div class="container-nav">
 				<div class="logo">
-					<img src="/img/1.jpg" alt="/img/1.jpg">
-					<img src="img/2.jpg" alt="img/2.jpg">
-					<img src="team1.jpg" alt="team">
+					<img src="img/002-social-media.png" alt="Logo">
 				</div>
 				<div class="enlaces" id="enlaces">
 					<a href="#" id="enlace-inicio" class="btn-header">Inicio</a>
@@ -72,7 +69,6 @@
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, harum.</p>
 					</div>
 				</div>
-
 			</div>
 		</section>
 		<section class="about" id="servicio">
@@ -151,24 +147,24 @@
                </div>
             </div>
             <div class="cont-work diseño">
-      	      <div class="img-work">
-	               <img src="/img/grupo2_3.jpg" alt="" width="200">
-					</div>
+      	      	<div class="img-work">
+	               <img src="img/grupo2_3.jpg" alt="" width="200">
+		</div>
                <div class="textos-work">
                	<h4>Grupo 2 3</h4>
             	</div>
             </div>
             <div class="cont-work marketing">
-         	   <div class="img-work">
-            	   <img src="/img/grupo3_1.jpg" alt="" width="200">
-      			</div>
+		    <div class="img-work">
+            	   	<img src="img/grupo3_1.jpg" alt="" width="200">
+		    </div>
                <div class="textos-work">
                	<h4>Marketing 1</h4>
                </div>
             </div>
             <div class="cont-work marketing">
             	<div class="img-work">
-               	<img src="/img/grupo3_2.jpg" alt="" width="200">
+               	<img src="img/grupo3_2.jpg" alt="" width="200">
                </div>
                <div class="textos-work">
                	<h4>Marketing 2</h4>
@@ -176,7 +172,7 @@
             </div>
             <div class="cont-work marketing">
             	<div class="img-work">
-               	<img src="/img/grupo3_3.jpg" alt="" width="200">
+               	<img src="img/grupo3_3.jpg" alt="" width="200">
                </div>
                <div class="textos-work">
                	<h4>Marketing 3</h4>
@@ -188,7 +184,7 @@
 	<footer id="contacto">
 		<div class="footer container">
 			<div class="marca-logo">
-				<img src="/img/002-social-media.png" alt="Logo">
+				<img src="img/002-social-media.png" alt="Logo">
 			</div>
 			<div class="iconos">
 				<i class="fab fa-github fa-5x"></i>
