--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
             <div class="cont-work diseño">
             	<div class="img-work">
-               	<img src="/img/grupo2_2.jpg" alt="" width="200">
+               	<img src="img/grupo2_2.jpg" alt="" width="200">
                </div>
                <div class="textos-work">
                	<h4>Grupo 2 2</h4>
